fix: adjust footer alignment and remove min-height from content

--- a/src/sections/footer/style.module.css
+++ b/src/sections/footer/style.module.css
@@ -8,12 +8,11 @@
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     padding: 20px;
 }
 
 .content {
-    min-height: 250px;
     width: 320px;
     margin: 10px;
     display: flex;
